--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,10 +1,10 @@
-apiVersion: extensions.maistra.io/v1alpha1
+apiVersion: maistra.io/v1alpha1
 kind: ServiceMeshExtension
 metadata:
   name: header-append
 spec:
   config: test
-  image: quay.io/maistra/header-append-filter:latest
+  image: quay.io/maistra-dev/header-append-filter:latest
   phase: PostAuthZ
   priority: 1000
   workloadSelector:
