--- a/deploy.yaml
+++ b/deploy.yaml
@@ -3,8 +3,9 @@ kind: ServiceMeshExtension
 metadata:
   name: header-append
 spec:
-  config: test
-  image: quay.io/maistra-dev/header-append-filter:latest
+  config:
+    custom-header: test
+  image: quay.io/maistra-dev/header-append-filter:2.1
   phase: PostAuthZ
   priority: 1000
   workloadSelector:
