--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,13 +1,14 @@
-apiVersion: maistra.io/v1
-kind: ServiceMeshExtension
+apiVersion: extensions.istio.io/v1alpha1
+kind: WasmPlugin
 metadata:
   name: header-append
+  namespace: istio-system
 spec:
-  config:
-    custom-header: test
-  image: quay.io/maistra-dev/header-append-filter:2.1
-  phase: PostAuthZ
-  priority: 1000
-  workloadSelector:
-    labels:
+  selector:
+    matchLabels:
       app: httpbin
+  url: oci://quay.io/maistra-dev/header-append-filter:2.3
+  phase: STATS
+  pluginConfig:
+    first-header: some-value
+    another-header: another-value
